tests/derive_ui/external_subcommand_misuse.stderr
error: `external_subcommand` cannot be used with `arg`
 --> tests/derive_ui/external_subcommand_misuse.rs:5:15
  |
5 |     #[command(external_subcommand)]
  |               ^^^^^^^^^^^^^^^^^^^
